test_pascal/test_init_variable.pas
type
    em = (asd, asdas, asdsd);
var
    c: integer = 10;
    a: array[1..3] of integer = (1, 2, 3);
    b: array[1..3] of string = ('123', '123', 'ads');
    d: string = 'asdasd';
    e: char = 'a';
    f: set of char = ['a', 'a','d'];
    h: set of integer;
    g: em = asd;

//error

begin
    h := [1, 1, 3];
end.
